# summarize_dataframe

./: pyproject.toml  tox.ini
.github/workflows/: ci.yml
summarize_dataframe/: summarize_df.py
tests/: test_summarize_dataframe.py
