[tool.poetry]
name = "summarize-dataframe"
version = "0.1.0"
description = ""
authors = ["Olivier Weisz <olivier.weisz@xomnia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pynvim = "^0.5.2"
numpy = "^2.1.3"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
