[tool.poetry]
name = "test-project"
version = "0.1.0"
description = ""
authors = ["Olivier Weisz <olivier.weisz@xomnia.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pynvim = "^0.5.2"
numpy = "^2.1.3"
pandas = "^2.2.3"
pytest = "^8.3.4"
commitizen = "^4.0.0"
pre-commit = "^4.0.1"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"